cminusparser.jj
options {
Ignore_Case = false;
STATIC=false;
DEBUG_PARSER=true; //true
DEBUG_LOOKAHEAD=true; //true
}

PARSER_BEGIN(cminusparser)

import java.util.*;

public class cminusparser {

    static class symbol{
            String categoria;
            String tipo;
            int tamanio;
        }

    static Hashtable<String, symbol> contenedor = new Hashtable<String,symbol>();

    public static void main(String [] args) throws ParseException{
            cminusparser anLex = new cminusparser(System.in);
            anLex.Inicio();
            mostrar();
            System.out.println("\n\nAnalysis has ended successfully!");

    }

    static void guardar(String Id, String categoria, String tipo, int tamanio ){
        //Enumeration llaves = contenedor.keys();
        //while (llaves.hasMoreElements()) {
        //    if(llaves.nextElement().equals(Id)){
        //        System.out.println("Repeticion de declaracion en el identificador: " + Id);
        //    }
        //}

        if(!contenedor.containsKey(Id)){
            System.out.println("Repeticion de declaracion en el identificador: " + Id);
            symbol simbolo = new symbol();
                    simbolo.categoria = categoria;
                    simbolo.tipo = tipo;
                    simbolo.tamanio = tamanio;
            contenedor.put(Id,simbolo);

        }
        else{
            System.out.println("Id ya existe");
        }

    	//System.out.println(""+"Id: " + Id + " Corresponde: " + contenedor.get(Id));
    }

    static void mostrar (){
        System.out.println("ACCEDIENDO A TABLA DE SIMBOLOS(HASH)");
    	for(String id : contenedor.keySet()){
            symbol simbolo = new symbol();
            simbolo = contenedor.get(id);

            System.out.println("\n\nVariable: " + id + "\ncategoria: " + simbolo.categoria + "\ntipo: " + simbolo.tipo + "\ntamaño: " + simbolo.tamanio);}

    }

}
PARSER_END(cminusparser)

TOKEN : {
    <CONDICIONAL_IF: "if">
    {System.out.println(matchedToken.beginLine + ". Se encontro el condicional if: " +image);}
}

TOKEN : {
    <CONDICIONAL_ELSE: "else">
    {System.out.println(matchedToken.beginLine + ". Se encontro el condicional else: " +image);}
}

TOKEN : {
    <DATO_INT: "int">
    {System.out.println(matchedToken.beginLine + ". Se encontro el tipo de dato int: " +image);}
}

TOKEN : {
    <DATO_FLOAT: "float">
    {System.out.println(matchedToken.beginLine + ". Se encontro el tipo de dato float: " +image);}
}

TOKEN : {
    <DATO_CHAR: "char">
    {System.out.println(matchedToken.beginLine + ". Se encontro el tipo de dato char: " +image);}
}

TOKEN : {
    <RETORNAR_RETURN: "return">
    {System.out.println(matchedToken.beginLine + ". Se encontro el retorno de valor return: " +image);}
}

TOKEN : {
    <VACIO_VOID: "void">
    {System.out.println(matchedToken.beginLine + ". Se encontro el vacio: " +image);}
}

TOKEN : {
    <CICLO_WHILE: "while">
    {System.out.println(matchedToken.beginLine + ". Se encontro el inicio del ciclo while: " +image);}
}

TOKEN : {
    <SIMBOLO_MAS: ["+"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo mas: " +image);}
}

TOKEN : {
    <SIMBOLO_MENOS: ["-"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo menos: " +image);}
}

TOKEN : {
    <SIMBOLO_POR: ["*"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo asterisco: " +image);}
}

TOKEN : {
    <SIMBOLO_DIVISION: ["/"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo diagonal: " +image);}
}

TOKEN : {
    <SIMBOLO_MODULO: ["%"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo porcentaje: " +image);}
}

TOKEN : {
    <SIMBOLO_MENOR_QUE: ["<"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo menor que: " +image);}
}

TOKEN : {
    <SIMBOLO_MENOR_IGUAL: "<=">
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo menor igual que: " +image);}
}

TOKEN : {
    <SIMBOLO_MAYOR_QUE: [">"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo mayor que: " +image);}
}

TOKEN : {
    <SIMBOLO_MAYOR_IGUAL: ">=">
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo mayor igual que: " +image);}
}

TOKEN : {
    <SIMBOLO_COMPARACION: "==">
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo de comparacion: " +image);}
}

TOKEN : {
    <SIMBOLO_DIFERENTE: "!=">
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo de diferencia: " +image);}
}

TOKEN : {
    <SIMBOLO_ASIGNACION: ["="]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo igual o asignacion: " +image);}
}

TOKEN : {
    <SIMBOLO_PUNTO_Y_COMA: [";"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo punto y coma: " +image);}
}

TOKEN : {
    <SIMBOLO_COMA: [","]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo coma: " +image);}
}

TOKEN : {
    <SIMBOLO_PUNTO: ["."]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo punto: " +image);}
}

TOKEN : {
    <SIMBOLO_COMILLA_SIMPLE: ["'"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo comilla simple: " +image);}
}

TOKEN : {
    <SIMBOLO_COMILLA_DOBLE: "\"">
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo comilla doble: " +image);}
}

TOKEN : {
    <SIMBOLO_PARENTESIS_ABIERTO: ["("]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo de parentesis abierto: " +image);}
}

TOKEN : {

    <SIMBOLO_PARENTESIS_CERRADO: [")"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo de parentesis cerrado: " +image);}
}

TOKEN : {
    <SIMBOLO_CORCHETE_ABIERTO: ["["]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo de corchete abierto: " +image);}
}

TOKEN : {
    <SIMBOLO_CORCHETE_CERRADO: ["]"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo de corchete cerrado: " +image);}
}

TOKEN : {
    <SIMBOLO_LLAVE_ABIERTA: ["{"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo de llave abierta: " +image);}
}

TOKEN : {
    <SIMBOLO_LLAVE_CERRADA: ["}"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro el simbolo de llave cerrada: " +image);}
}

TOKEN : {
    <NUMERO_ENTERO: <DIGITO>(<DIGITO>)*>
    {System.out.println(matchedToken.beginLine + ". Se encontro un numero entero: " +image);}
}

TOKEN : {
    <NUMERO_REAL: (<DIGITO>)+<SIMBOLO_PUNTO>(<DIGITO>)+>
    {System.out.println(matchedToken.beginLine + ". Se encontro un numero real: " +image);}
}

TOKEN : {
    <CARACTER: <SIMBOLO_COMILLA_SIMPLE> (<DIGITO> | <LETRA>) <SIMBOLO_COMILLA_SIMPLE> | <SIMBOLO_COMILLA_SIMPLE><SIMBOLO_COMILLA_SIMPLE>>
    {System.out.println(matchedToken.beginLine + ". Se encontro un caracter: " +image);}
}

TOKEN : {
    <SIMBOLO_GUION_BAJO: ["_"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro un guion bajo: " +image);}
}

TOKEN : {
    <IDENTIFICADOR: <LETRA> (<LETRA> | <DIGITO> | <SIMBOLO_GUION_BAJO> )*>
    {System.out.println(matchedToken.beginLine + ". Se encontro un identificador: " +image);}
}

TOKEN : {
    <LETRA: ["a"-"z", "A"-"Z"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro una letra: " +image);}
}

TOKEN : {
    <DIGITO: ["0"-"9"]>
    {System.out.println(matchedToken.beginLine + ". Se encontro un digito: " +image);}
}

SKIP : {
    <ESPACIO: " ">
}


SKIP : {
    <NUEVA_LINEA: "\n">
}

SKIP : {
    <RETORNO_DE_CARRO: "\r">
}

SKIP : {
    <TABULACION: "\t">
}

SKIP : {
    <COMENTARIO_LINEAL: "//" (~["\n", "\r"])*>
}

SKIP:
{ 
    "/*": DENTRO_COMENTARIO
}
<DENTRO_COMENTARIO>SKIP:
{
    "*/": DEFAULT
}
<DENTRO_COMENTARIO>MORE:
{
    <~[]> 
}

SPECIAL_TOKEN : {
    <ERROR_CARACTER: <SIMBOLO_COMILLA_SIMPLE>(<DIGITO> | <LETRA> | <ESPACIO>)*<SIMBOLO_COMILLA_SIMPLE> |
    <SIMBOLO_COMILLA_SIMPLE>(<DIGITO> | <LETRA> | <ESPACIO>)* | (<DIGITO> | <LETRA> | <ESPACIO>)*<SIMBOLO_COMILLA_SIMPLE>>
    {System.out.println("ERROR LEXICO: Forma incorrecta de declarar un caracter: " + image + ". Linea " +matchedToken.beginLine);}
}


SPECIAL_TOKEN : {
    <ERROR_NUMERO_REAL: (<SIMBOLO_PUNTO>)+(<DIGITO>)+ | (<DIGITO>)+(<SIMBOLO_PUNTO>)+>
    {System.out.println("ERROR LEXICO: Forma incorrecta de declarar un numero real: " + image + ". Linea " +matchedToken.beginLine);}
}

SPECIAL_TOKEN : {
    <ERROR_IDENTIFICADOR: <DIGITO>(<LETRA> | <DIGITO> | <SIMBOLO_GUION_BAJO> )* | <SIMBOLO_GUION_BAJO>(<LETRA> | <DIGITO> | <SIMBOLO_GUION_BAJO> )*>
    {System.out.println("ERROR LEXICO: Forma incorrecta de declarar un identificador: " + image + ". Linea " +matchedToken.beginLine);}
}

SPECIAL_TOKEN : {
    <ERROR_SIMBOLO_INVALIDO: ~[]>
    {System.out.println("ERROR LEXICO: Simbolo no valido: " + image + ". Linea " +matchedToken.beginLine);}
}

void Inicio() : {}
{
    (program())+<EOF>
}

// GRAMATICA EN LINEA 1
void program() : {}
{
    declaration_list()
}

// GRAMATICA EN LINEA 2 (ARREGLADA)
void declaration_list() : {}
{
    declaration() declaration_list_prima()
}

//GRAMATICA EN LINEA 2 (ARREGLADA)
void declaration_list_prima() : {}
{
    (LOOKAHEAD(20) declaration() declaration_list_prima() )*
}

//GRAMATICA EN LINEA 3
void declaration() : {}
{
    LOOKAHEAD(20) var_declaration() | fun_declaration()
}

//GRAMATICA EN LINEA 4
//ARREGLAR PARA QUE DETECTE ARREGLOS INDIVIDUALES
void var_declaration() : {}
{
    type_specifier() <IDENTIFICADOR> {guardar(token.image, "variable", "int", 4);} (<SIMBOLO_CORCHETE_ABIERTO> <NUMERO_ENTERO> <SIMBOLO_CORCHETE_CERRADO>   | <SIMBOLO_COMA> <IDENTIFICADOR> {guardar(token.image,  "variable", "int", 4);} ) * <SIMBOLO_PUNTO_Y_COMA>
}

//GRAMATICA EN LINEA 5
void type_specifier() : {}
{
    <DATO_INT> | <DATO_FLOAT> | <DATO_CHAR> | <VACIO_VOID>
}
//GRAMATICA EN LINEA 6
void fun_declaration() : {}
{
    type_specifier() <IDENTIFICADOR> {guardar(token.image, "funcion", "int", 4);} <SIMBOLO_PARENTESIS_ABIERTO> params() <SIMBOLO_PARENTESIS_CERRADO> compound_stmt() {}
}
//GRAMATICA EN LINEA 7
void params() : {}
{
    LOOKAHEAD(20) param_list() | <VACIO_VOID>
}
//GRAMATICA EN LINEA 8 (ARREGLADA)
void param_list() : {}
{
    param() param_list_prima()
}
//GRAMATICA EN LINEA 8 (ARREGLADA)
void param_list_prima() : {}
{
    ( <SIMBOLO_COMA> param() )*
}
//GRAMATICA EN LINEA 9
void param() : {}
{
    type_specifier() <IDENTIFICADOR> {guardar(token.image, "variable", "int", 4);} (<SIMBOLO_CORCHETE_ABIERTO> <SIMBOLO_CORCHETE_CERRADO> {guardar(token.image, "arreglo", "int", 4);})*
}
//GRAMATICA EN LINEA 10
void compound_stmt() : {}
{
    <SIMBOLO_LLAVE_ABIERTA> local_declarations() statement_list() <SIMBOLO_LLAVE_CERRADA>
}
//GRAMATICA EN LINEA 11 (ARREGLADA)
void local_declarations() : {}
{
    local_declarations_prima()
}
//GRAMATICA EN LINEA 11 (ARREGLADA)
void local_declarations_prima() : {}
{
    (LOOKAHEAD(20) var_declaration() local_declarations() )*
}
//GRAMATICA EN LINEA 12 (ARREGLADA)
void statement_list() : {}
{
    statement_list_prima()
}
//GRAMATICA EN LINEA 12 (ARREGLADA)
void statement_list_prima() : {}
{
    (LOOKAHEAD(20) statement() statement_list_prima() )*
}
//GRAMATICA EN LINEA 13
void statement() : {}
{
    return_stmt() | expression_stmt() | compound_stmt() | selection_stmt() | iteration_stmt()
}
//GRAMATICA EN LINEA 14
void expression_stmt() : {}
{
    expression() <SIMBOLO_PUNTO_Y_COMA> | <SIMBOLO_PUNTO_Y_COMA>
}
//GRAMATICA EN LINEA 15
void selection_stmt() : {}
{
     parte_if() parte_else()
}

void parte_if(): {}
{
    <CONDICIONAL_IF> <SIMBOLO_PARENTESIS_ABIERTO> expression() <SIMBOLO_PARENTESIS_CERRADO>  statement()
}

void parte_else(): {}
{
    (LOOKAHEAD(20) <CONDICIONAL_ELSE>  statement())*
}

//GRAMATICA EN LINEA 16
void iteration_stmt() : {}
{
    <CICLO_WHILE> <SIMBOLO_PARENTESIS_ABIERTO> expression() <SIMBOLO_PARENTESIS_CERRADO> statement()
}
//GRAMATICA EN LINEA 17
void return_stmt() : {}
{
    <RETORNAR_RETURN> (<SIMBOLO_PUNTO_Y_COMA> | expression() <SIMBOLO_PUNTO_Y_COMA>)
}
//GRAMATICA EN LINEA 18
void expression() : {}
{
    LOOKAHEAD(20) var() <SIMBOLO_ASIGNACION> expression() | simple_expression()
}
//GRAMATICA EN LINEA 19
void var() : {}
{
    <IDENTIFICADOR> var_extra()
}

void var_extra(): {}
{
    (LOOKAHEAD(20)<SIMBOLO_CORCHETE_ABIERTO> expression() <SIMBOLO_CORCHETE_CERRADO>)*
}
//GRAMATICA EN LINEA 20
void simple_expression() : {}
{
    LOOKAHEAD(20) additive_expression() relop() additive_expression() | additive_expression()
}
//GRAMATICA EN LINEA 21
void relop() : {}
{
    <SIMBOLO_MENOR_IGUAL> | <SIMBOLO_MENOR_QUE> | <SIMBOLO_MAYOR_QUE> | <SIMBOLO_MAYOR_IGUAL> | <SIMBOLO_COMPARACION> | <SIMBOLO_DIFERENTE>
}
//GRAMATICA EN LINEA 22 (ARREGLADA)
void additive_expression() : {}
{
    term() additive_expression_prima()
}
//GRAMATICA EN LINEA 22 (ARREGLADA)
void additive_expression_prima() :{}
{
    (LOOKAHEAD(20) addop() term() additive_expression_prima())*
}
//GRAMATICA EN LINEA 23
void addop() : {}
{
    <SIMBOLO_MAS> | <SIMBOLO_MENOS>
}
//GRAMATICA EN LINEA 24 (ARREGLADA)
void term() : {}
{
    factor() term_prima()
}
//GRAMATICA EN LINEA 24 (ARREGLADA)
void term_prima() : {}
{
    (LOOKAHEAD(20) mulop() factor() term_prima() )*
}
//GRAMATICA EN LINEA 25
void mulop() : {}
{
    <SIMBOLO_POR> | <SIMBOLO_DIVISION> | <SIMBOLO_MODULO>
}
//GRAMATICA EN LINEA 26
void factor() : {}
{
    LOOKAHEAD(20)  call() | <SIMBOLO_PARENTESIS_ABIERTO> expression() <SIMBOLO_PARENTESIS_CERRADO> | LOOKAHEAD(20)  var() |  <NUMERO_ENTERO> | <NUMERO_REAL> | <CARACTER>
}
//GRAMATICA EN LINEA 27
void call() : {}
{
    <IDENTIFICADOR> <SIMBOLO_PARENTESIS_ABIERTO> args() <SIMBOLO_PARENTESIS_CERRADO>
}
//GRAMATICA EN LINEA 28
void args() : {}
{
    (arg_list())*
}
//GRAMATICA EN LINEA 29 (ARREGLADA)
void arg_list() :{}
{
    expression() arg_list_prima()
}
//GRAMATICA EN LINEA 29 (ARREGLADA)
void arg_list_prima() : {}
{
    (LOOKAHEAD(20) <SIMBOLO_COMA> expression() arg_list_prima() )*
}
