cminusparser.java
/* Generated By:JavaCC: Do not edit this line. cminusparser.java */
import java.util.*;

public class cminusparser implements cminusparserConstants {

    static class symbol{
            String categoria;
            String tipo;
            int tamanio;
        }

    static Hashtable<String, symbol> contenedor = new Hashtable<String,symbol>();

    public static void main(String [] args) throws ParseException{
            cminusparser anLex = new cminusparser(System.in);
            anLex.Inicio();
            mostrar();
            System.out.println("\n\nAnalysis has ended successfully!");

    }

    static void guardar(String Id, String categoria, String tipo, int tamanio ){
        //Enumeration llaves = contenedor.keys();
        //while (llaves.hasMoreElements()) {
        //    if(llaves.nextElement().equals(Id)){
        //        System.out.println("Repeticion de declaracion en el identificador: " + Id);
        //    }
        //}

        if(!contenedor.containsKey(Id)){

            symbol simbolo = new symbol();
                    simbolo.categoria = categoria;
                    simbolo.tipo = tipo;
                    simbolo.tamanio = tamanio;
            contenedor.put(Id,simbolo);

        }
        else{
            System.out.println("Repeticion de declaracion en el identificador: " + Id);
        }

        //System.out.println(""+"Id: " + Id + " Corresponde: " + contenedor.get(Id));
    }

    static int verificacionTamanio(String tipo){
        if (tipo.equals("int")){
            return 4;
        }
        if (tipo.equals("float")){
            return 8;
        }
        if (tipo.equals("char")){
            return 1;
        }
        if (tipo.equals("void")){
            return 0;
        }
        return 99;

    }

    static void mostrar (){
        System.out.println("ACCEDIENDO A TABLA DE SIMBOLOS(HASH)");
        for(String id : contenedor.keySet()){
            symbol simbolo = new symbol();
            simbolo = contenedor.get(id);

            System.out.println("\n\nVariable: " + id + "\ncategoria: " + simbolo.categoria + "\ntipo: " + simbolo.tipo + "\ntama\u00c3\u00b1o o # de parametros: " + simbolo.tamanio);}

    }

  final public void Inicio() throws ParseException {
    trace_call("Inicio");
    try {
      label_1:
      while (true) {
        program();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DATO_INT:
        case DATO_FLOAT:
        case DATO_CHAR:
        case VACIO_VOID:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
      jj_consume_token(0);
    } finally {
      trace_return("Inicio");
    }
  }

// GRAMATICA EN LINEA 1
  final public void program() throws ParseException {
    trace_call("program");
    try {
      declaration_list();
    } finally {
      trace_return("program");
    }
  }

// GRAMATICA EN LINEA 2 (ARREGLADA)
  final public void declaration_list() throws ParseException {
    trace_call("declaration_list");
    try {
      declaration();
      declaration_list_prima();
    } finally {
      trace_return("declaration_list");
    }
  }

//GRAMATICA EN LINEA 2 (ARREGLADA)
  final public void declaration_list_prima() throws ParseException {
    trace_call("declaration_list_prima");
    try {
      label_2:
      while (true) {
        if (jj_2_1(20)) {
          ;
        } else {
          break label_2;
        }
        declaration();
        declaration_list_prima();
      }
    } finally {
      trace_return("declaration_list_prima");
    }
  }

//GRAMATICA EN LINEA 3
  final public void declaration() throws ParseException {
    trace_call("declaration");
    try {
      if (jj_2_2(20)) {
        var_declaration();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DATO_INT:
        case DATO_FLOAT:
        case DATO_CHAR:
        case VACIO_VOID:
          fun_declaration();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("declaration");
    }
  }

//GRAMATICA EN LINEA 4
//ARREGLAR PARA QUE DETECTE ARREGLOS INDIVIDUALES
  final public void var_declaration() throws ParseException {
    trace_call("var_declaration");
    try {
                          String id, tipo;
      tipo = type_specifier();
      jj_consume_token(IDENTIFICADOR);
                                           id=token.image;
      var_declaration_ending(id, tipo);
    } finally {
      trace_return("var_declaration");
    }
  }

  final public void var_declaration_ending(String id, String tipo) throws ParseException {
    trace_call("var_declaration_ending");
    try {
                                                     int tamanio;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SIMBOLO_PUNTO_Y_COMA:
        jj_consume_token(SIMBOLO_PUNTO_Y_COMA);
                            tamanio=verificacionTamanio(tipo);guardar(id, "variable", tipo, tamanio);
        break;
      case SIMBOLO_CORCHETE_ABIERTO:
        jj_consume_token(SIMBOLO_CORCHETE_ABIERTO);
        jj_consume_token(NUMERO_ENTERO);
                                                tamanio=Integer.parseInt(token.image);
        jj_consume_token(SIMBOLO_CORCHETE_CERRADO);
        jj_consume_token(SIMBOLO_PUNTO_Y_COMA);
                                                                                                                                           guardar(id, "arreglo", tipo, tamanio);
        break;
      case SIMBOLO_COMA:
        varias_variables(tipo);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("var_declaration_ending");
    }
  }

  final public void varias_variables(String tipo) throws ParseException {
    trace_call("varias_variables");
    try {
                                    int tamanio;
      jj_consume_token(SIMBOLO_COMA);
      jj_consume_token(IDENTIFICADOR);
                                    tamanio=verificacionTamanio(tipo);guardar(token.image, "variable", tipo, tamanio);
      varias_variables(tipo);
    } finally {
      trace_return("varias_variables");
    }
  }

//GRAMATICA EN LINEA 5
  final public String type_specifier() throws ParseException {
    trace_call("type_specifier");
    try {
                           String tipo;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DATO_INT:
        jj_consume_token(DATO_INT);
                tipo = token.image; {if (true) return tipo;}
        break;
      case DATO_FLOAT:
        jj_consume_token(DATO_FLOAT);
                                                                  tipo = token.image; {if (true) return tipo;}
        break;
      case DATO_CHAR:
        jj_consume_token(DATO_CHAR);
                                                                                                                   tipo = token.image; {if (true) return tipo;}
        break;
      case VACIO_VOID:
        jj_consume_token(VACIO_VOID);
                                                                                                                                                                     tipo = token.image; {if (true) return tipo;}
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("type_specifier");
    }
  }

//GRAMATICA EN LINEA 6
  final public void fun_declaration() throws ParseException {
    trace_call("fun_declaration");
    try {
                          String tipo, id; int tamanio;
      tipo = type_specifier();
      jj_consume_token(IDENTIFICADOR);
                                             id = token.image;
      jj_consume_token(SIMBOLO_PARENTESIS_ABIERTO);
      tamanio = params();
      jj_consume_token(SIMBOLO_PARENTESIS_CERRADO);
                                                                                                                                               guardar(id, "funcion", tipo, tamanio);
      compound_stmt();

    } finally {
      trace_return("fun_declaration");
    }
  }

//GRAMATICA EN LINEA 7
  final public int params() throws ParseException {
    trace_call("params");
    try {
                int contador = 0;
      if (jj_2_3(20)) {
        contador = param_list();
                                           {if (true) return contador;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VACIO_VOID:
          jj_consume_token(VACIO_VOID);
                                                                             contador = 0; {if (true) return contador;}
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("params");
    }
  }

//GRAMATICA EN LINEA 8 (ARREGLADA)
  final public int param_list() throws ParseException {
    trace_call("param_list");
    try {
                    int contador = 0;
      param();
             System.out.println("cantidad de contador antes de incremento: " + contador); contador++; System.out.println("cantidad de contador despues de incremento: " + contador);
      contador = param_list_prima(contador);
                                                                                                                                                                                                                              {if (true) return contador;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("param_list");
    }
  }

//GRAMATICA EN LINEA 8 (ARREGLADA)
  final public int param_list_prima(int contador) throws ParseException {
    trace_call("param_list_prima");
    try {
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SIMBOLO_COMA:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
        jj_consume_token(SIMBOLO_COMA);
        param();
                              contador++;
      }
                                               {if (true) return contador;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("param_list_prima");
    }
  }

//GRAMATICA EN LINEA 9
  final public void param() throws ParseException {
    trace_call("param");
    try {
      type_specifier();
      jj_consume_token(IDENTIFICADOR);
                                      guardar(token.image, "variable", "int", 4);
      param_ending();
    } finally {
      trace_return("param");
    }
  }

  final public void param_ending() throws ParseException {
    trace_call("param_ending");
    try {
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SIMBOLO_CORCHETE_ABIERTO:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_4;
        }
        jj_consume_token(SIMBOLO_CORCHETE_ABIERTO);
        jj_consume_token(SIMBOLO_CORCHETE_CERRADO);
                                                            guardar(token.image, "arreglo", "int", 4);
      }
    } finally {
      trace_return("param_ending");
    }
  }

//GRAMATICA EN LINEA 10
  final public void compound_stmt() throws ParseException {
    trace_call("compound_stmt");
    try {
      jj_consume_token(SIMBOLO_LLAVE_ABIERTA);
      local_declarations();
      statement_list();
      jj_consume_token(SIMBOLO_LLAVE_CERRADA);
    } finally {
      trace_return("compound_stmt");
    }
  }

//GRAMATICA EN LINEA 11 (ARREGLADA)
  final public void local_declarations() throws ParseException {
    trace_call("local_declarations");
    try {
      local_declarations_prima();
    } finally {
      trace_return("local_declarations");
    }
  }

//GRAMATICA EN LINEA 11 (ARREGLADA)
  final public void local_declarations_prima() throws ParseException {
    trace_call("local_declarations_prima");
    try {
      label_5:
      while (true) {
        if (jj_2_4(20)) {
          ;
        } else {
          break label_5;
        }
        var_declaration();
        local_declarations();
      }
    } finally {
      trace_return("local_declarations_prima");
    }
  }

//GRAMATICA EN LINEA 12 (ARREGLADA)
  final public void statement_list() throws ParseException {
    trace_call("statement_list");
    try {
      statement_list_prima();
    } finally {
      trace_return("statement_list");
    }
  }

//GRAMATICA EN LINEA 12 (ARREGLADA)
  final public void statement_list_prima() throws ParseException {
    trace_call("statement_list_prima");
    try {
      label_6:
      while (true) {
        if (jj_2_5(20)) {
          ;
        } else {
          break label_6;
        }
        statement();
        statement_list_prima();
      }
    } finally {
      trace_return("statement_list_prima");
    }
  }

//GRAMATICA EN LINEA 13
  final public void statement() throws ParseException {
    trace_call("statement");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RETORNAR_RETURN:
        return_stmt();
        break;
      case SIMBOLO_PUNTO_Y_COMA:
      case SIMBOLO_PARENTESIS_ABIERTO:
      case NUMERO_ENTERO:
      case NUMERO_REAL:
      case CARACTER:
      case IDENTIFICADOR:
        expression_stmt();
        break;
      case SIMBOLO_LLAVE_ABIERTA:
        compound_stmt();
        break;
      case CONDICIONAL_IF:
        selection_stmt();
        break;
      case CICLO_WHILE:
        iteration_stmt();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("statement");
    }
  }

//GRAMATICA EN LINEA 14
  final public void expression_stmt() throws ParseException {
    trace_call("expression_stmt");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SIMBOLO_PARENTESIS_ABIERTO:
      case NUMERO_ENTERO:
      case NUMERO_REAL:
      case CARACTER:
      case IDENTIFICADOR:
        expression();
        jj_consume_token(SIMBOLO_PUNTO_Y_COMA);
        break;
      case SIMBOLO_PUNTO_Y_COMA:
        jj_consume_token(SIMBOLO_PUNTO_Y_COMA);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("expression_stmt");
    }
  }

//GRAMATICA EN LINEA 15
  final public void selection_stmt() throws ParseException {
    trace_call("selection_stmt");
    try {
      parte_if();
      parte_else();
    } finally {
      trace_return("selection_stmt");
    }
  }

  final public void parte_if() throws ParseException {
    trace_call("parte_if");
    try {
      jj_consume_token(CONDICIONAL_IF);
      jj_consume_token(SIMBOLO_PARENTESIS_ABIERTO);
      expression();
      jj_consume_token(SIMBOLO_PARENTESIS_CERRADO);
      statement();
    } finally {
      trace_return("parte_if");
    }
  }

  final public void parte_else() throws ParseException {
    trace_call("parte_else");
    try {
      label_7:
      while (true) {
        if (jj_2_6(20)) {
          ;
        } else {
          break label_7;
        }
        jj_consume_token(CONDICIONAL_ELSE);
        statement();
      }
    } finally {
      trace_return("parte_else");
    }
  }

//GRAMATICA EN LINEA 16
  final public void iteration_stmt() throws ParseException {
    trace_call("iteration_stmt");
    try {
      jj_consume_token(CICLO_WHILE);
      jj_consume_token(SIMBOLO_PARENTESIS_ABIERTO);
      expression();
      jj_consume_token(SIMBOLO_PARENTESIS_CERRADO);
      statement();
    } finally {
      trace_return("iteration_stmt");
    }
  }
